# anthropic-agent-sdk

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README_API.md  SECURITY.md
.cargo/: config.toml
demos/role-play/: Cargo.toml  README.md  WORKFLOW.md
demos/role-play/.cargo/: config.toml
demos/role-play/.claude/: scene-rules.json  settings.local.json
demos/role-play/.claude/hooks/: package.json  post-tool-use-hook.js  scene-state-hook.js  state-updater-hook.js  state-updater-stop-hook.js
demos/role-play/.claude/hooks/shared/: matcher.js
demos/role-play/.claude/hooks/tests/: run-tests.js  test-post-tool-input.json  test-prompt-input.json
demos/role-play/.claude/scene-state/: .previous-state.json  analysis.json
demos/role-play/personas/: agent_a.txt  agent_b.txt  analyzer.txt  artist.txt  detective.txt
demos/role-play/src/: config.rs  input.rs  main.rs  output.rs  thinking.rs
demos/tui-demo/: Cargo.toml
demos/tui-demo/src/: config.rs  input.rs  main.rs  output.rs
docs/: goose-tui-analysis.md
examples/: bidirectional_demo.rs  buffered_bidirectional_demo.rs  checkpointing_demo.rs  checkpointing_rewind_test.rs  convenience_methods.rs  custom_agent_test.rs  debug_init.rs  hook_debug.rs  hook_subagent_test.rs  hooks_demo.rs  hooks_feedback_demo.rs  hooks_lifecycle_test.rs  integrated_hooks_test.rs  interactive_client.rs  interrupt_demo.rs  introspection_demo.rs  knowledge_builder.rs  mcp_integration.rs  mcp_server.rs  message_queue_demo.rs  oauth_demo.rs  permissions_demo.rs  plan_mode_demo.rs  result_fields_demo.rs  runtime_setters_demo.rs  security_demo.rs  session_binding_demo.rs  simple_query.rs  skills_demo.rs  slash_command_demo.rs  structured_output_demo.rs  unicode_safety_demo.rs  write_tool_test.rs
src/: callbacks.rs  client.rs  error.rs  hooks.rs  lib.rs  permissions.rs  query.rs  utils.rs
src/auth/: mod.rs  oauth.rs  token.rs
src/control/: mod.rs  protocol.rs
src/mcp/: mod.rs  sdk.rs
src/message/: parser.rs
src/transport/: mod.rs  subprocess.rs
src/types/: hooks.rs  identifiers.rs  introspection.rs  mcp.rs  messages.rs  mod.rs  options.rs  permissions.rs  usage.rs
tests/: client_tests.rs  control_protocol_tests.rs  security_tests.rs
