[package]
name = "anthropic-agent-sdk"
version = "0.2.60"
edition = "2024"
authors = ["Angel Bartolli <bartolli@gmail.com>"]
description = "Rust SDK for Claude Code CLI - streaming queries, hooks, permissions, and MCP integration"
license = "MIT"
repository = "https://github.com/bartolli/anthropic-agent-sdk"
keywords = ["claude", "ai", "sdk", "anthropic", "agent"]
categories = ["api-bindings", "asynchronous"]
rust-version = "1.85.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dependencies]
# Async runtime
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["codec", "rt"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client (for future MCP HTTP support)
reqwest = { version = "0.12.24", features = ["json", "stream"], optional = true }

# Official Anthropic MCP SDK (optional - for SDK MCP servers)
rmcp = { version = "0.10.0", optional = true, features = ["server", "client", "transport-io", "transport-child-process", "transport-streamable-http-server", "transport-sse-server", "transport-worker", "macros"] }

# Error handling
thiserror = "2.0.17"

# Builder pattern
typed-builder = "0.23.2"

# Async streams
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"

# Process utilities
which = "8.0.0"

# Tracing (always available - zero cost when no subscriber attached)
tracing = "0.1.43"

# Optional dependencies
schemars = { version = "1.1.0", optional = true }

[dev-dependencies]
anyhow = "1.0"
tokio-test = "0.4"
tempfile = "3.0"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
chrono = "0.4"

[features]
default = []
rmcp = ["dep:rmcp", "dep:schemars"]

[[example]]
name = "simple_query"
path = "examples/simple_query.rs"

[[example]]
name = "interactive_client"
path = "examples/interactive_client.rs"

[[example]]
name = "bidirectional_demo"
path = "examples/bidirectional_demo.rs"

[[example]]
name = "hooks_demo"
path = "examples/hooks_demo.rs"

[[example]]
name = "permissions_demo"
path = "examples/permissions_demo.rs"

[[example]]
name = "hook_subagent_test"
path = "examples/hook_subagent_test.rs"

[[example]]
name = "convenience_methods"
path = "examples/convenience_methods.rs"

[[example]]
name = "integrated_hooks_test"
path = "examples/integrated_hooks_test.rs"

[[example]]
name = "custom_agent_test"
path = "examples/custom_agent_test.rs"

[[example]]
name = "knowledge_builder"
path = "examples/knowledge_builder.rs"

[[example]]
name = "result_fields_demo"
path = "examples/result_fields_demo.rs"

[[example]]
name = "runtime_setters_demo"
path = "examples/runtime_setters_demo.rs"

[[example]]
name = "introspection_demo"
path = "examples/introspection_demo.rs"

[[example]]
name = "slash_command_demo"
path = "examples/slash_command_demo.rs"

[[example]]
name = "skills_demo"
path = "examples/skills_demo.rs"

[[example]]
name = "plan_mode_demo"
path = "examples/plan_mode_demo.rs"

[[example]]
name = "hooks_feedback_demo"
path = "examples/hooks_feedback_demo.rs"

[[example]]
name = "mcp_server"
path = "examples/mcp_server.rs"
required-features = ["rmcp"]

[[example]]
name = "mcp_integration"
path = "examples/mcp_integration.rs"
