[package]
name = "claude-role-play"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "Two-agent role-play demo - Claude agents with different personas conversing"
authors = ["Angel Bartolli <bartolli@gmail.com>"]
license = "MIT"

[dependencies]
# SDK (workspace inheritance - uses path for dev, version for publish)
anthropic-agent-sdk.workspace = true
serde_json = "1.0"

# Async
tokio = { version = "1.48", features = ["full"] }
futures = "0.3"

# TUI (Goose-style)
cliclack = "0.3"          # Spinners, prompts, selects
console = "0.16.1"        # Text styling, terminal info
indicatif = "0.18.3"      # Progress bars

# Rendering
bat = { version = "0.26.1", default-features = false, features = ["regex-onig"] }

# Input
rustyline = "17.0.2"      # REPL with history, completion
rustyline-derive = "0.11.1"  # Derive macros for rustyline

# Utils
rand = "0.9.2"            # Random thinking messages
anyhow = "1.0"            # Error handling
tracing = "0.1"           # Logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }  # CLI argument parsing
dirs = "6.0.0"            # Data directories
