[package]
name = "claude-tui-demo"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "Interactive TUI demo for Claude Agent SDK"
authors = ["Angel Bartolli <bartolli@gmail.com>"]
license = "MIT"

[dependencies]
# SDK (workspace inheritance - uses path for dev, version for publish)
anthropic-agent-sdk.workspace = true
serde_json = "1.0"

# Async
tokio = { version = "1.48", features = ["full"] }
futures = "0.3"

# TUI (Goose-style)
cliclack = "0.3"        # Spinners, prompts, selects
console = "0.16.1"        # Text styling, terminal info
rustyline = "17.0.2"        # REPL with history, completion
rustyline-derive = "0.11.1"  # Derive macros for rustyline
indicatif = "0.18.3"      # Progress bars

# Rendering
bat = { version = "0.26.1", default-features = false, features = ["regex-onig"] }

# Utils
rand = "0.9.2"            # Random thinking messages
anyhow = "1.0"          # Error handling
tracing = "0.1"         # Logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6.0.0"              # Data directories
